--- a/src/pages/about.module.css
+++ b/src/pages/about.module.css
@@ -17,12 +17,6 @@
 }
 
 .aboutContainer {
-  margin: 10px;
-  padding: 10px;
-}
-
-p {
-  padding: 5px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -30,6 +24,17 @@ p {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  width: 100%;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.aboutContainer p {
+  width: 80%;
+  padding: 5px;
   line-height: 2;
 }
 /*# sourceMappingURL=about.module.css.map */
