--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -11,13 +11,14 @@
 }
 
 .aboutContainer {
-    margin: 10px;
-    padding: 10px;
-}
-
-p {
-    padding: 5px;
     display: flex;
     flex-direction: column;
-    line-height: 2;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    p {
+        width: 80%;
+        padding: 5px;
+        line-height: 2;
+    }
 }
