--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -31,7 +31,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;        padding: 1rem;
+        justify-content: center;        
+        padding: 1rem;
         text-decoration: none;
     }
     a:hover {
