--- a/src/pages/components/header.module.css
+++ b/src/pages/components/header.module.css
@@ -13,13 +13,13 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: #81a50a;
+  color: #e22d2d;
   text-decoration: none;
   font-size: 20px;
 }
 
 .ul {
-  background: black;
+  background: #aaaaaa;
   padding: 5px 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -46,7 +46,8 @@
 
 .ul a {
   padding: 3px 5px;
-  width: 25%;
+  width: 20%;
+  white-space: nowrap;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -62,7 +63,7 @@
 }
 
 .ul a:hover {
-  color: #405300;
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .link {
