--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -32,7 +32,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
+    border-bottom: 1px solid black;
 }
 
 .postContainer{
