--- a/src/pages/components/footer.module.css
+++ b/src/pages/components/footer.module.css
@@ -1,6 +1,11 @@
 .footer {
   position: relative;
   bottom: 0;
-  background: transparent;
+  background: black;
+}
+
+.footer p {
+  padding-left: 15px;
+  color: #aaaaaa;
 }
 /*# sourceMappingURL=footer.module.css.map */
