--- a/src/templates/blog.module.css
+++ b/src/templates/blog.module.css
@@ -49,7 +49,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  border: 1px solid black;
+  border-bottom: 1px solid black;
 }
 
 .postContainer {
