--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -3,7 +3,7 @@
     background: linear-gradient(
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)),
-        url('./images/coffeebeansbackground.jpg');
+        url('./images/chemex.jpg');
 }
 
 
