--- a/src/pages/styles/index.scss
+++ b/src/pages/styles/index.scss
@@ -42,7 +42,7 @@ $grey: rgb(104, 104, 104);
         border-radius: 15px;
     }
     a:hover {
-        color: darkgreen;
+        color: red;
     }
 }
 
