--- a/src/pages/components/header.module.scss
+++ b/src/pages/components/header.module.scss
@@ -1,45 +1,66 @@
 * {
-    margin: 0;
+    margin: auto;
 }
 
-.headingTitle {
+.navbarContainer {
     display: flex;
     width: 100%;
-    justify-content: center;
-    align-items: center;
-    color: rgb(226, 45, 45);
-    text-decoration: none;
-    font-size: 20px;
+    padding-bottom: 3px;
+    padding-top: 3px;
+    background:rgb(170, 170, 170);
+    justify-content: space-evenly;
+    position: relative;
+    .hamburger {
+        position: absolute;
+        right: 10px;
+        float: right;
+        display: flex;
+        font-size: 25px;
+        align-items: center;
+        justify-content: flex-end;
+        cursor: pointer;
+    }
+    .headingTitle {
+        display: flex;
+        float: left;
+        width: 50%;
+        justify-content: center;
+        align-items: center;
+        color: rgb(226, 45, 45);
+        text-decoration: none;
+        font-size: 20px;
+    }
 }
+
 
 .ul {
     background: rgb(170, 170, 170);
-    padding: 5px 0;
     display: flex;
+    flex-direction: column;
     width: 100%;
+    padding: 0;
     text-decoration: none;
     list-style: none;
     text-align: center;
+    justify-content: space-evenly;
     .li {
         width: 100%;
+        white-space: nowrap;
         text-align: center;
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: center;
     }
     a {
-        padding: 3px 5px;
-        width: 20%;
-        white-space: nowrap;
         display: flex;
+        justify-content: space-evenly;
         border-radius: 15px;
-        align-items: center;
-        justify-content: center;
         text-align: center;
-        font-size: 25px;
+        font-size: 20px;
     }
     a:hover {
-        color: rgba($color: #ffffff, $alpha: 0.8);
+        color: darkgray;
+        background-color: red;
     }
 }
 
