--- a/src/pages/components/header.module.css
+++ b/src/pages/components/header.module.css
@@ -8,7 +8,6 @@
   display: flex;
   width: 100%;
   padding-bottom: 3px;
-  padding-top: 3px;
   background: #aaaaaa;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
@@ -18,6 +17,7 @@
 
 .navbarContainer .hamburger {
   position: absolute;
+  height: 100%;
   right: 10px;
   float: right;
   display: -webkit-box;
@@ -47,11 +47,12 @@
           align-items: center;
   color: #e22d2d;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 35px;
 }
 
 .ul {
-  background: #aaaaaa;
+  position: absolute;
+  background: #818181;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -67,6 +68,7 @@
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  border-top: 1px solid black;
 }
 
 .ul .li {
@@ -76,12 +78,13 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 5px 0;
 }
 
 .ul a {
@@ -97,7 +100,9 @@
 }
 
 .ul a:hover {
-  color: darkgray;
+  -webkit-transition: ease-in 0.2s;
+  transition: ease-in 0.2s;
+  color: black;
   background-color: red;
 }
 
