--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -10,6 +10,7 @@
 .heading {
     width: 100%;
     color: white;
+    text-decoration: underline;
     display: flex;
     text-align: center;
     align-items: center;
