--- a/src/pages/blog.module.css
+++ b/src/pages/blog.module.css
@@ -7,6 +7,7 @@
 .heading {
   width: 100%;
   color: white;
+  text-decoration: underline;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
