--- a/src/pages/components/header.module.scss
+++ b/src/pages/components/header.module.scss
@@ -6,7 +6,8 @@
     display: flex;
     width: 100%;
     padding-bottom: 3px;
-    background:rgb(170, 170, 170);
+    background: rgb(128,128,128);
+background: linear-gradient(90deg, rgba(128,128,128,1) 25%, rgba(170,170,170,1) 50%, rgba(128,128,128,1) 75%);
     justify-content: space-evenly;
     position: relative;
     .hamburger {
