--- a/src/pages/styles/index.css
+++ b/src/pages/styles/index.css
@@ -18,15 +18,15 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-image: url("../images/coffeeshop.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../images/coffeebeansbackground.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/coffeebeansbackground.jpg");
   background-position: center;
   background-size: cover;
   height: 90vh;
 }
 
 .home-page .hero {
-  background: white;
-  padding: 50px;
+  padding: 65px;
   border-radius: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -39,8 +39,8 @@
 
 .home-page h2 {
   margin: 5px;
-  color: black;
-  font-size: 40px;
+  color: white;
+  font-size: 50px;
 }
 
 .home-page a {
