--- a/src/pages/styles/index.scss
+++ b/src/pages/styles/index.scss
@@ -19,7 +19,7 @@ $grey: rgb(104, 104, 104);
     background: linear-gradient(
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)),
-        url('../images/coffeebeansbackground.jpg');
+        url('../images/chemex.jpg');
     background-position: center;
     background-size: cover;
     height: 90vh;
